--- a/configs/config_mathlib_full.json
+++ b/configs/config_mathlib_full.json
@@ -1,7 +1,7 @@
 [
     {
         "repo": "https://github.com/leanprover-community/mathlib4",
-        "commit": "aa936c36e8484abd300577139faf8e945850831a",
+        "commit": "v4.18.0",
         "lean": "leanprover/lean4:v4.18.0",
         "name": "mathlib",
         "import_file": "Mathlib.lean",
