--- a/lake-manifest.json
+++ b/lake-manifest.json
@@ -1,37 +1,7 @@
 {"version": "1.1.0",
  "packagesDir": ".lake/packages",
  "packages":
- [{"url": "https://github.com/leanprover/doc-gen4",
-   "type": "git",
-   "subDir": null,
-   "scope": "",
-   "rev": "b3fb998509f92a040e362f8a06f8ee2825ec8c10",
-   "name": "«doc-gen4»",
-   "manifestFile": "lake-manifest.json",
-   "inputRev": "v4.18.0",
-   "inherited": false,
-   "configFile": "lakefile.lean"},
-  {"url": "https://github.com/JOSHCLUNE/LeanSMTParser.git",
-   "type": "git",
-   "subDir": null,
-   "scope": "",
-   "rev": "15c641b2f5330aef1451e97d1c5fcf7ad584ffcf",
-   "name": "QuerySMT",
-   "manifestFile": "lake-manifest.json",
-   "inputRev": "15c641b2f5330aef1451e97d1c5fcf7ad584ffcf",
-   "inherited": false,
-   "configFile": "lakefile.lean"},
-  {"url": "https://github.com/JOSHCLUNE/lean-premise-selection.git",
-   "type": "git",
-   "subDir": null,
-   "scope": "",
-   "rev": "86f02182e5b30737b41aae20b8ef59d3f03d0a84",
-   "name": "leanPremiseSelection",
-   "manifestFile": "lake-manifest.json",
-   "inputRev": "86f02182e5b30737b41aae20b8ef59d3f03d0a84",
-   "inherited": false,
-   "configFile": "lakefile.lean"},
-  {"url": "https://github.com/leanprover-community/mathlib4.git",
+ [{"url": "https://github.com/leanprover-community/mathlib4.git",
    "type": "git",
    "subDir": null,
    "scope": "",
@@ -41,85 +11,15 @@
    "inputRev": "v4.18.0",
    "inherited": false,
    "configFile": "lakefile.lean"},
-  {"url": "https://github.com/mhuisi/lean4-cli",
+  {"url": "https://github.com/leanprover/doc-gen4.git",
    "type": "git",
    "subDir": null,
    "scope": "",
-   "rev": "dd423cf2b153b5b14cb017ee4beae788565a3925",
-   "name": "Cli",
-   "manifestFile": "lake-manifest.json",
-   "inputRev": "main",
-   "inherited": true,
-   "configFile": "lakefile.toml"},
-  {"url": "https://github.com/jcommelin/lean4-unicode-basic",
-   "type": "git",
-   "subDir": null,
-   "scope": "",
-   "rev": "458e2d3feda3999490987eabee57b8bb88b1949c",
-   "name": "UnicodeBasic",
-   "manifestFile": "lake-manifest.json",
-   "inputRev": "bump_to_v4.18.0-rc1",
-   "inherited": true,
-   "configFile": "lakefile.lean"},
-  {"url": "https://github.com/dupuisf/BibtexQuery",
-   "type": "git",
-   "subDir": null,
-   "scope": "",
-   "rev": "c07de335d35ed6b118e084ec48cffc39b40d29d2",
-   "name": "BibtexQuery",
-   "manifestFile": "lake-manifest.json",
-   "inputRev": "master",
-   "inherited": true,
-   "configFile": "lakefile.toml"},
-  {"url": "https://github.com/acmepjz/md4lean",
-   "type": "git",
-   "subDir": null,
-   "scope": "",
-   "rev": "7cf25ec0edf7a72830379ee227eefdaa96c48cfb",
-   "name": "MD4Lean",
-   "manifestFile": "lake-manifest.json",
-   "inputRev": "main",
-   "inherited": true,
-   "configFile": "lakefile.lean"},
-  {"url": "https://github.com/hanwenzhu/premise-selection",
-   "type": "git",
-   "subDir": null,
-   "scope": "",
-   "rev": "143e6f77fb9d6b8dad865625da1ff378b8e9cbee",
-   "name": "«premise-selection»",
+   "rev": "b3fb998509f92a040e362f8a06f8ee2825ec8c10",
+   "name": "«doc-gen4»",
    "manifestFile": "lake-manifest.json",
    "inputRev": "v4.18.0",
-   "inherited": true,
-   "configFile": "lakefile.toml"},
-  {"url": "https://github.com/leanprover-community/duper.git",
-   "type": "git",
-   "subDir": null,
-   "scope": "",
-   "rev": "8c3185d2ff48d45ef127b3137e8a6f3f31f8b1a8",
-   "name": "Duper",
-   "manifestFile": "lake-manifest.json",
-   "inputRev": "8c3185d2ff48d45ef127b3137e8a6f3f31f8b1a8",
-   "inherited": true,
-   "configFile": "lakefile.lean"},
-  {"url": "https://github.com/leanprover-community/batteries",
-   "type": "git",
-   "subDir": null,
-   "scope": "",
-   "rev": "613510345e4d4b3ce3d8c129595e7241990d5b39",
-   "name": "batteries",
-   "manifestFile": "lake-manifest.json",
-   "inputRev": "v4.18.0",
-   "inherited": true,
-   "configFile": "lakefile.toml"},
-  {"url": "https://github.com/leanprover-community/lean-auto.git",
-   "type": "git",
-   "subDir": null,
-   "scope": "",
-   "rev": "084da43b10a998dd9cd3115d1cbbaecb47734f9a",
-   "name": "auto",
-   "manifestFile": "lake-manifest.json",
-   "inputRev": "084da43b10a998dd9cd3115d1cbbaecb47734f9a",
-   "inherited": true,
+   "inherited": false,
    "configFile": "lakefile.lean"},
   {"url": "https://github.com/leanprover-community/plausible",
    "type": "git",
@@ -180,6 +80,56 @@
    "manifestFile": "lake-manifest.json",
    "inputRev": "master",
    "inherited": true,
-   "configFile": "lakefile.toml"}],
+   "configFile": "lakefile.toml"},
+  {"url": "https://github.com/leanprover-community/batteries",
+   "type": "git",
+   "subDir": null,
+   "scope": "leanprover-community",
+   "rev": "613510345e4d4b3ce3d8c129595e7241990d5b39",
+   "name": "batteries",
+   "manifestFile": "lake-manifest.json",
+   "inputRev": "main",
+   "inherited": true,
+   "configFile": "lakefile.toml"},
+  {"url": "https://github.com/leanprover/lean4-cli",
+   "type": "git",
+   "subDir": null,
+   "scope": "leanprover",
+   "rev": "dd423cf2b153b5b14cb017ee4beae788565a3925",
+   "name": "Cli",
+   "manifestFile": "lake-manifest.json",
+   "inputRev": "main",
+   "inherited": true,
+   "configFile": "lakefile.toml"},
+  {"url": "https://github.com/jcommelin/lean4-unicode-basic",
+   "type": "git",
+   "subDir": null,
+   "scope": "",
+   "rev": "458e2d3feda3999490987eabee57b8bb88b1949c",
+   "name": "UnicodeBasic",
+   "manifestFile": "lake-manifest.json",
+   "inputRev": "bump_to_v4.18.0-rc1",
+   "inherited": true,
+   "configFile": "lakefile.lean"},
+  {"url": "https://github.com/dupuisf/BibtexQuery",
+   "type": "git",
+   "subDir": null,
+   "scope": "",
+   "rev": "c07de335d35ed6b118e084ec48cffc39b40d29d2",
+   "name": "BibtexQuery",
+   "manifestFile": "lake-manifest.json",
+   "inputRev": "master",
+   "inherited": true,
+   "configFile": "lakefile.toml"},
+  {"url": "https://github.com/acmepjz/md4lean",
+   "type": "git",
+   "subDir": null,
+   "scope": "",
+   "rev": "7cf25ec0edf7a72830379ee227eefdaa96c48cfb",
+   "name": "MD4Lean",
+   "manifestFile": "lake-manifest.json",
+   "inputRev": "main",
+   "inherited": true,
+   "configFile": "lakefile.lean"}],
  "name": "«lean-training-data»",
  "lakeDir": ".lake"}
