--- a/configs/config_mathlib.json
+++ b/configs/config_mathlib.json
@@ -1,8 +1,8 @@
 [
     {
         "repo": "https://github.com/leanprover-community/mathlib4",
-        "commit": "v4.21.0-rc3",
-        "lean": "leanprover/lean4:v4.21.0-rc3",
+        "commit": "v4.21.0",
+        "lean": "leanprover/lean4:v4.21.0",
         "name": "mathlib",
         "import_file": "Mathlib.lean",
         "imports": ["Mathlib"]
